# unittest_training

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/actions/env_setup/: action.yml
.github/workflows/: formatting_and_linting.yml  unittests.yml
.github/workflows/callers/: formatting_and_linting.yml  unittests.yml
.github/workflows/reusable/: env_setup.yml
src/: calculator.py
src/unittest_training/: calculator.py  calculator_basics.py  calculator_mocking.py  user_manager_fixtures.py
src/unittest_training/fixtures/: user_manager_fixtures.py
src/unittest_training/mocking/: calculator_mocking.py
src/unittest_training/projects/: README.md
src/unittest_training/projects/textfile_writer/: README.md  textfile_writer.py  textfile_writer_cli.py
tests/: test_calculator.py  test_calculator_basics.py  test_calculator_mocking.py  test_user_manager_fixtures.py
tests/basics/: test_calculator_basics.py
tests/fixtures/: test_user_manager_fixtures.py
tests/mocking/: test_calculator_mocking.py
tests/projects/textfile_writer/: test_textfile_writer.py
