[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unittest_training"
version = "0.1.0"
description = "A toy project for practicing Unittests in Python via Pytest and CI via GitHub Actions."
authors = [{ name = "Jonas Neumayer" }]
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

