[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unittest_training"
version = "0.1.0"
description = "A toy project for practicing Unittests in Python via Pytest and CI via GitHub Actions."
authors = [{ name = "Jonas Neumayer" }]
dependencies = []
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"] 
python_files = ["test_*.py"]
pythonpath = ["unittest_training"]